--- a/Random-Number-Generator-Example/Podfile
+++ b/Random-Number-Generator-Example/Podfile
@@ -7,6 +7,7 @@ target 'Random-Number-Generator-Example' do
   use_frameworks!
 
   # Pods for Random-Number-Generator-Example
-  pod 'MIMIKEdgeMobileClient'
+  pod 'MIMIKEdgeClient'
+  pod 'MIMIKEdgeClientIdentity'
   pod 'Alamofire'
 end
