--- a/Random-Number-Generator-Example/Podfile
+++ b/Random-Number-Generator-Example/Podfile
@@ -3,11 +3,16 @@ source 'https://github.com/CocoaPods/Specs.git'
 source 'https://github.com/mimikgit/cocoapod-edge-specs.git'
 
 target 'Random-Number-Generator-Example' do
-  # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
+  pod 'MIMIKEdgeClientCore'
+  pod 'MIMIKEdgeClientEngine'
+end
 
-  # Pods for Random-Number-Generator-Example
-  pod 'MIMIKEdgeClient'
-  pod 'MIMIKEdgeClientIdentity'
-  pod 'Alamofire'
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
+      config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
+    end
+  end
 end
