Project and Podfile settings update
Deployment target set to iOS 17.0
Platform support set to iPhone and iPad
Updated code comments
Fewer warnings from Podfile

--- a/Random-Number-Generator-Example/Podfile
+++ b/Random-Number-Generator-Example/Podfile
@@ -4,6 +4,7 @@ source 'https://github.com/mimikgit/cocoapod-edge-specs.git'
 
 target 'Random-Number-Generator-Example' do
   use_frameworks!
+  inhibit_all_warnings!
   pod 'EdgeCore'
   pod 'EdgeEngineDeveloper'
 end
