--- a/Random-Number-Generator-Example/Podfile
+++ b/Random-Number-Generator-Example/Podfile
@@ -4,8 +4,9 @@ source 'https://github.com/mimikgit/cocoapod-edge-specs.git'
 
 target 'Random-Number-Generator-Example' do
   use_frameworks!
-  pod 'MIMIKEdgeClientCore'
-  pod 'MIMIKEdgeClientEngine'
+  inhibit_all_warnings!
+  pod 'EdgeCore'
+  pod 'EdgeEngineDeveloper'
 end
 
 post_install do |installer|
