--- a/Random-Number-Generator-Example/Podfile
+++ b/Random-Number-Generator-Example/Podfile
@@ -6,7 +6,7 @@ target 'Random-Number-Generator-Example' do
   use_frameworks!
   inhibit_all_warnings!
   pod 'EdgeCore'
-  pod 'EdgeEngineDeveloper'
+  pod 'mimOE-SE-iOS-developer'
 end
 
 post_install do |installer|
